--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -1,43 +1,47 @@
 * {
-
     box-sizing: border-box; 
     margin:0;
     padding: 0;
 }
 
-body {
-
-    background-color: yellow; 
-    
+#root{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-
-.herosection {
-
-   background-image: url('../../assets/hero-section.png') ;
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;
-   
-   height: 180px;
-   border-radius: 10px;
-   margin: 10px;
-  
-   
+.gallery{
+  margin-top: 20px;
+  border-radius: 25px; 
+  font-family: 'Montserrat';   
 }
 
 .subtitle-hero{
    position: absolute;
-    margin-top: 60px;
-    margin-left: 10px;
-    margin-right: 50px;
-   
+   margin-top: 80px;
    color: #FFFFFF;
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
-   font-size: 23px;
-    
-
+   font-size: 23px;   
 }
 
+@media screen and (min-width: 1200px){
+   
+  #root{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    }
+
+ 
+  .gallery{
+    margin-top: 20px;
+    background-color: #F6F6F6;
+    border-radius: 25px; 
+    font-family: 'Montserrat';
+    padding: 20px;
+
+  }
+  
+}
