--- a/components/Collapse/collapse.css
+++ b/components/Collapse/collapse.css
@@ -1,62 +1,93 @@
 .box-collapse{
-
  
-    margin:15px;
-
+  font-family: Montserrat;
+  color:white;
+  font-size: 12px;
+  padding-top: 5px;
+  width: 100%;
 
 }
 
 .section-title-collapse{
-  
   display:flex;
   justify-content:space-between;
-  background-color : #FF6060
+  background-color : #FF6060;
+  border-radius : 5px;
 
 }
 
-.content{
-    height:0;
-    opacity:0;
-    display: flex;  
-   
-    transition: all 600ms ease-in-out;
-    overflow: hidden; 
-
+.contenu_txt{
+  margin-top: 9px;
+  margin-left: 15px;
+  font-weight:100;
+ 
 }
 
-.show{
-  height: 100px; 
-  opacity: 1; 
-  display:flex; 
-  overflow: visible;
-  transition: all 600ms ease-in-out; 
-   background-color: pink;
-  
+//button chevron
 
-}
-
-
-//bouton chevron
-
-.ouvert{
+button .open{
   rotate: 0deg;
   height:auto;
-  height: auto; 
   opacity: 1; 
-  display:block; 
+  display:block;
+    
+}
+
+button{
+  background-color: #FF6060;
+  border-style : none;
+  border-radius: 5px;
 
 }
 
-.fermer{
+#content-collapse{
+  background-color: #F6F6F6;
+  color: #FF6060;
+  padding: 15px;
+  list-style-type: none;
+  border-radius: 5px 5px;
+  
+}
+
+.close{
    rotate: 180deg;
    height: auto; 
-      
+   background-color:  rgba(0,0,0,0.0); 
+   border-style:none;
 }
 
 .hide {
     rotate: 0deg;
     height:auto;
     display: none;
-  
 }
+
+@media screen and (min-width: 1200px){
+
+.box-collapse{
+  font-family: Montserrat;
+  color:white;
+  font-size: 13px;
+  padding-top: 0px;
+  min-width: auto;
+  margin-bottom: 30px;
+
+}
+  
+.collapse-part{
+  display: grid;
+  gap: 44px;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+   
+}
+
+.flat-description{
+   margin-left: 200px;
+   margin-right: 200px;
+}
+  
+
+}
+
 
