--- a/components/Erreur/erreur.css
+++ b/components/Erreur/erreur.css
@@ -1,5 +1,6 @@
 .erreur-img{
-    display:block;
+    display:flex;
+    flex-direction: column;
     justify-content: center; 
     margin-top: 200px;
     width: 350px;
@@ -17,5 +18,18 @@
     margin-top:150px;
     text-decoration: underline;
     color: #FF6060;
+
+}
+
+@media (min-width: 1200px) {
+
+
+  .erreur-img{
+    margin:auto;
+    margin-top: 50px;
+    width: 450px;
+}
+
+
 
 }
