--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -20,11 +20,15 @@
    position: absolute;
    margin-top: 80px;
    color: #FFFFFF;
+   overflow: hidden;
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
    font-size: 23px;   
 }
+
+
+
 
 @media screen and (min-width: 1200px){
    
