--- a/components/Card/card.css
+++ b/components/Card/card.css
@@ -5,6 +5,32 @@
     height: auto;
     margin-left: 15px;
 }
+.cardwrapper {
+  position: relative;
+  width: 100%;
+  height: 340px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.cardwrapper img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.cardwrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: linear-gradient(180deg, rgba(181, 181, 181, 0.47) 35%, rgba(21, 21, 21, 0.6) 100%);
+}
 
 
 @media (min-width: 1200px) {
@@ -18,12 +44,8 @@
   
   }
   
-  .cardwrapper:hover{
-    cursor:pointer; 
-    transform: scale(1.01);
-    box-shadow:   3px 2px rgba(34, 34, 34, 0.2);
 
-  }
+
 
   .home-subtitle{
     position: absolute;
@@ -33,6 +55,3 @@
 
   
 }
-
-
-
